# jubilant-dollop

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  count_by.cc  count_by.h  count_by_test.cc  fake_fs.cc  fake_fs.h  fake_record_set.cc  fake_record_set.h  from.cc  from.h  from_test.cc  fs_provider.h  fs_provider_test.cc  fstream_fs.cc  fstream_fs.h  join.cc  join.h  join_test.cc  main.cc  mock_fs.h  operator_factory.h  order_by.cc  order_by.h  order_by_test.cc  query.cc  query.h  query_test.cc  real_fs.cc  real_fs.h  real_operator_factory.cc  real_operator_factory.h  record_set.h  select.cc  select.h  select_test.cc  (+4 more)
hack/: fmt  hack  test-in-docker
